--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <head>
         <title>Odin Recipes web site</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
-    <body>
-        <h1>Odin Recipes</h1>
-        <h2>Christmas Dinner menu</h2>
+        <body>
+        <div class="mis"><h1>Odin Recipes</h1></div>
+        <div class="sir"><h2>Christmas Dinner menu</h2></div>
 
-        <ol>
+        <div class="rokt"><ol>
             <li><a href="./recipes/1-Soup">Roasted Butternut Squash Soup</a></li>          
             <li><a href="./recipes/2-Beef-Wellington">Beef Wellington</a></li>
             <li><a href="./recipes/3-Mac-n-Cheese">Baked Mac n Cheese</a></li>
             <li><a href="./recipes/4-Pie">Truly Coconutty Cream Pie</a></li>
-        </ol>
+        </ol></div>
     
-    <img src="./pics/xmas-dinner.png" alt="Christmas dinner party">
+    <div class="rokt"><img src="./pics/xmas-dinner.png" alt="Christmas dinner party"></div>
 
 
     </body>
